// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App Bar down into tree 1`] = `
<div
  style={
    Object {
      "background": "#ffffff",
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    className="SplitPane  vertical "
    style={
      Object {
        "MozUserSelect": "text",
        "WebkitUserSelect": "text",
        "display": "flex",
        "flex": 1,
        "flexDirection": "row",
        "height": "100%",
        "left": 0,
        "msUserSelect": "text",
        "outline": "none",
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
        "userSelect": "text",
      }
    }
  >
    <div
      className="Pane vertical Pane1"
      style={
        Object {
          "flex": 1,
          "outline": "none",
          "overflowX": "auto",
          "overflowY": "auto",
          "position": "relative",
        }
      }
    >
      <div>
        <div
          className="AppBarEG-root-1"
        >
          <header
            className="MuiPaper-root-11 MuiPaper-shadow4-17 MuiAppBar-root-4 MuiAppBar-positionStatic-7 MuiAppBar-colorPrimary-9"
          >
            <div
              className="MuiToolbar-root-38 MuiToolbar-gutters-39"
            >
              <button
                aria-label="Back"
                className="MuiButtonBase-root-49 MuiIconButton-root-40 MuiIconButton-colorContrast-42 AppBarEG-menuButton-3"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                type="button"
              >
                <span
                  className="MuiIconButton-label-46"
                >
                  <svg
                    className="MuiIconButton-icon-47"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    style={
                      Object {
                        "color": "rgba(0, 0, 0, 0.87)",
                        "display": "inline-block",
                        "fill": "currentColor",
                        "height": 24,
                        "muiPrepared": true,
                        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                        "userSelect": "none",
                        "width": 24,
                      }
                    }
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                    />
                  </svg>
                </span>
                <span
                  className="MuiTouchRipple-root-51"
                />
              </button>
              <h2
                className="MuiTypography-root-58 MuiTypography-title-64 MuiTypography-colorInherit-77 AppBarEG-flex-2"
                onClick={[Function]}
              >
                Artstre
              </h2>
              <button
                className="MuiButtonBase-root-49 MuiButton-root-82 MuiButton-flatContrast-87"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                type="button"
              >
                <span
                  className="MuiButton-label-84"
                >
                  <svg
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    style={
                      Object {
                        "color": "rgba(0, 0, 0, 0.87)",
                        "display": "inline-block",
                        "fill": "currentColor",
                        "height": 24,
                        "muiPrepared": true,
                        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                        "userSelect": "none",
                        "width": 24,
                      }
                    }
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                    />
                  </svg>
                </span>
                <span
                  className="MuiTouchRipple-root-51"
                />
              </button>
            </div>
          </header>
        </div>
      </div>
    </div>
    <span
      className="Resizer vertical "
      onClick={[Function]}
      onDoubleClick={[Function]}
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "cursor": "col-resize",
          "marginRight": -6,
          "width": 10,
          "zIndex": 1,
        }
      }
    />
    <div
      className="Pane vertical Pane2"
      style={
        Object {
          "flex": "none",
          "outline": "none",
          "position": "relative",
          "width": 0,
        }
      }
    >
      <div
        className="sb-addon-material-ui-theme_sidebar"
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots App Bar root 1`] = `
<div
  style={
    Object {
      "background": "#ffffff",
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    className="SplitPane  vertical "
    style={
      Object {
        "MozUserSelect": "text",
        "WebkitUserSelect": "text",
        "display": "flex",
        "flex": 1,
        "flexDirection": "row",
        "height": "100%",
        "left": 0,
        "msUserSelect": "text",
        "outline": "none",
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
        "userSelect": "text",
      }
    }
  >
    <div
      className="Pane vertical Pane1"
      style={
        Object {
          "flex": 1,
          "outline": "none",
          "overflowX": "auto",
          "overflowY": "auto",
          "position": "relative",
        }
      }
    >
      <div>
        <div
          className="AppBarEG-root-1"
        >
          <header
            className="MuiPaper-root-11 MuiPaper-shadow4-17 MuiAppBar-root-4 MuiAppBar-positionStatic-7 MuiAppBar-colorPrimary-9"
          >
            <div
              className="MuiToolbar-root-38 MuiToolbar-gutters-39"
            >
              <button
                aria-label="Back"
                className="MuiButtonBase-root-49 MuiIconButton-root-40 MuiIconButton-colorContrast-42 AppBarEG-menuButton-3"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                type="button"
              >
                <span
                  className="MuiIconButton-label-46"
                >
                  <svg
                    className="MuiIconButton-icon-47"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    style={
                      Object {
                        "color": "rgba(0, 0, 0, 0.87)",
                        "display": "inline-block",
                        "fill": "currentColor",
                        "height": 24,
                        "muiPrepared": true,
                        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                        "userSelect": "none",
                        "width": 24,
                      }
                    }
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                    />
                  </svg>
                </span>
                <span
                  className="MuiTouchRipple-root-51"
                />
              </button>
              <h2
                className="MuiTypography-root-58 MuiTypography-title-64 MuiTypography-colorInherit-77 AppBarEG-flex-2"
                onClick={[Function]}
              >
                Artstre
              </h2>
              <button
                className="MuiButtonBase-root-49 MuiButton-root-82 MuiButton-flatContrast-87"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                type="button"
              >
                <span
                  className="MuiButton-label-84"
                >
                  <svg
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    style={
                      Object {
                        "color": "rgba(0, 0, 0, 0.87)",
                        "display": "inline-block",
                        "fill": "currentColor",
                        "height": 24,
                        "muiPrepared": true,
                        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                        "userSelect": "none",
                        "width": 24,
                      }
                    }
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                    />
                  </svg>
                </span>
                <span
                  className="MuiTouchRipple-root-51"
                />
              </button>
            </div>
          </header>
        </div>
      </div>
    </div>
    <span
      className="Resizer vertical "
      onClick={[Function]}
      onDoubleClick={[Function]}
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "cursor": "col-resize",
          "marginRight": -6,
          "width": 10,
          "zIndex": 1,
        }
      }
    />
    <div
      className="Pane vertical Pane2"
      style={
        Object {
          "flex": "none",
          "outline": "none",
          "position": "relative",
          "width": 0,
        }
      }
    >
      <div
        className="sb-addon-material-ui-theme_sidebar"
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Map environment filtered alt 1`] = `
<div
  style={
    Object {
      "height": 1552,
      "width": 1237,
    }
  }
>
  <h3>
    Taxon #
    0
    : range 
    0
    -
    20000
  </h3>
  <div
    id={0}
  >
    <canvas
      id="map-canvas-heatmap"
      style={
        Object {
          "height": undefined,
          "width": undefined,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Map environment filtered dekkfrøete <200m ASL 1`] = `
<div
  style={
    Object {
      "height": 1552,
      "width": 1237,
    }
  }
>
  <h3>
    Taxon #
    1281
    : range 
    0
    -
    200
  </h3>
  <div
    id={1281}
  >
    <canvas
      id="map-canvas-heatmap"
      style={
        Object {
          "height": undefined,
          "width": undefined,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Map environment filtered dekkfrøete >400m ASL 1`] = `
<div
  style={
    Object {
      "height": 1552,
      "width": 1237,
    }
  }
>
  <h3>
    Taxon #
    1281
    : range 
    400
    -
    20000
  </h3>
  <div
    id={1281}
  >
    <canvas
      id="map-canvas-heatmap"
      style={
        Object {
          "height": undefined,
          "width": undefined,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Map environment filtered fjellbjørk <600m ASL 1`] = `
<div
  style={
    Object {
      "height": 1552,
      "width": 1237,
    }
  }
>
  <h3>
    Taxon #
    138955
    : range 
    0
    -
    600
  </h3>
  <div
    id={138955}
  >
    <canvas
      id="map-canvas-heatmap"
      style={
        Object {
          "height": undefined,
          "width": undefined,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Map observations scatterplot  alt 1`] = `
<div>
  <h3>
    Taxon #
    0
  </h3>
  <div
    id={0}
  >
    <canvas
      id="map-canvas-scatter"
      style={
        Object {
          "height": 1552,
          "width": 1237,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Map observations scatterplot  dekkfrøete 1`] = `
<div>
  <h3>
    Taxon #
    1281
  </h3>
  <div
    id={1281}
  >
    <canvas
      id="map-canvas-scatter"
      style={
        Object {
          "height": 1552,
          "width": 1237,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Map observations scatterplot  fjellbjørk 1`] = `
<div>
  <h3>
    Taxon #
    138955
  </h3>
  <div
    id={138955}
  >
    <canvas
      id="map-canvas-scatter"
      style={
        Object {
          "height": 1552,
          "width": 1237,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Map observations static  alt 1`] = `
<div>
  <h3>
    Taxon #
    0
  </h3>
  <div
    id={0}
  >
    <canvas
      id="map-canvas"
      style={
        Object {
          "height": 1552,
          "width": 1237,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Map observations static  dekkfrøete 1`] = `
<div>
  <h3>
    Taxon #
    1281
  </h3>
  <div
    id={1281}
  >
    <canvas
      id="map-canvas"
      style={
        Object {
          "height": 1552,
          "width": 1237,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Map observations static  fjellbjørk 1`] = `
<div>
  <h3>
    Taxon #
    138955
  </h3>
  <div
    id={138955}
  >
    <canvas
      id="map-canvas"
      style={
        Object {
          "height": 1552,
          "width": 1237,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Taxon Card default 1`] = `
<div
  style={
    Object {
      "background": "#ffffff",
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    className="SplitPane  vertical "
    style={
      Object {
        "MozUserSelect": "text",
        "WebkitUserSelect": "text",
        "display": "flex",
        "flex": 1,
        "flexDirection": "row",
        "height": "100%",
        "left": 0,
        "msUserSelect": "text",
        "outline": "none",
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
        "userSelect": "text",
      }
    }
  >
    <div
      className="Pane vertical Pane1"
      style={
        Object {
          "flex": 1,
          "outline": "none",
          "overflowX": "auto",
          "overflowY": "auto",
          "position": "relative",
        }
      }
    >
      <div>
        <div
          style={
            Object {
              "WebkitTapHighlightColor": "rgba(0,0,0,0)",
              "backgroundColor": "#ffffff",
              "borderRadius": 2,
              "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
                     0 1px 4px rgba(0, 0, 0, 0.12)",
              "boxSizing": "border-box",
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "Roboto, sans-serif",
              "muiPrepared": true,
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              "zIndex": 1,
            }
          }
          title="Bildet symboliserer ikke nødvendigvis gjeldende art, men kan være eksempel på underart eller annen nærliggende art. "
        >
          <div
            style={
              Object {
                "paddingBottom": 0,
              }
            }
          >
            <div
              style={
                Object {
                  "muiPrepared": true,
                  "position": "relative",
                }
              }
            >
              <div
                style={
                  Object {
                    "muiPrepared": true,
                  }
                }
              >
                <img
                  alt=""
                  src="http://nodeyoda.westeurope.cloudapp.azure.com/taxonPhoto/196.jpg"
                  style={
                    Object {
                      "maxWidth": "100%",
                      "minWidth": "100%",
                      "muiPrepared": true,
                      "verticalAlign": "top",
                      "width": "100%",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "muiPrepared": true,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "height": "100%",
                      "muiPrepared": true,
                      "position": "relative",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "background": "rgba(0, 0, 0, 0.54)",
                        "bottom": 0,
                        "left": 0,
                        "muiPrepared": true,
                        "paddingTop": 8,
                        "position": "absolute",
                        "right": 0,
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "muiPrepared": true,
                          "padding": 16,
                          "position": "relative",
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "rgba(255, 255, 255, 0.87)",
                            "display": "block",
                            "fontSize": 24,
                            "lineHeight": "36px",
                            "muiPrepared": true,
                          }
                        }
                      />
                      <span
                        style={
                          Object {
                            "color": "rgba(255, 255, 255, 0.54)",
                            "display": "block",
                            "fontSize": 14,
                            "muiPrepared": true,
                          }
                        }
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              style={
                Object {
                  "muiPrepared": true,
                  "padding": 8,
                  "position": "relative",
                }
              }
            >
              <button
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                    "backgroundColor": "rgba(0, 0, 0, 0)",
                    "border": 10,
                    "borderRadius": 2,
                    "boxSizing": "border-box",
                    "color": "rgba(0, 0, 0, 0.87)",
                    "cursor": "pointer",
                    "display": "inline-block",
                    "fontFamily": "Roboto, sans-serif",
                    "fontSize": "inherit",
                    "fontWeight": "inherit",
                    "height": 36,
                    "lineHeight": "36px",
                    "margin": 0,
                    "marginRight": 8,
                    "minWidth": 88,
                    "muiPrepared": true,
                    "outline": "none",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "relative",
                    "textAlign": "center",
                    "textDecoration": "none",
                    "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                    "userSelect": "none",
                    "verticalAlign": null,
                  }
                }
                tabIndex={0}
                type="button"
              >
                <div
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                >
                  <span
                    style={
                      Object {
                        "fontSize": 14,
                        "fontWeight": 500,
                        "letterSpacing": 0,
                        "muiPrepared": true,
                        "paddingLeft": 16,
                        "paddingRight": 16,
                        "position": "relative",
                        "textTransform": "uppercase",
                        "verticalAlign": "middle",
                      }
                    }
                  >
                    Action1
                  </span>
                </div>
              </button>
              <button
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                    "backgroundColor": "rgba(0, 0, 0, 0)",
                    "border": 10,
                    "borderRadius": 2,
                    "boxSizing": "border-box",
                    "color": "rgba(0, 0, 0, 0.87)",
                    "cursor": "pointer",
                    "display": "inline-block",
                    "fontFamily": "Roboto, sans-serif",
                    "fontSize": "inherit",
                    "fontWeight": "inherit",
                    "height": 36,
                    "lineHeight": "36px",
                    "margin": 0,
                    "marginRight": 8,
                    "minWidth": 88,
                    "muiPrepared": true,
                    "outline": "none",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "relative",
                    "textAlign": "center",
                    "textDecoration": "none",
                    "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                    "userSelect": "none",
                    "verticalAlign": null,
                  }
                }
                tabIndex={0}
                type="button"
              >
                <div
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                >
                  <span
                    style={
                      Object {
                        "fontSize": 14,
                        "fontWeight": 500,
                        "letterSpacing": 0,
                        "muiPrepared": true,
                        "paddingLeft": 16,
                        "paddingRight": 16,
                        "position": "relative",
                        "textTransform": "uppercase",
                        "verticalAlign": "middle",
                      }
                    }
                  >
                    Action2
                  </span>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      className="Resizer vertical "
      onClick={[Function]}
      onDoubleClick={[Function]}
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "cursor": "col-resize",
          "marginRight": -6,
          "width": 10,
          "zIndex": 1,
        }
      }
    />
    <div
      className="Pane vertical Pane2"
      style={
        Object {
          "flex": "none",
          "outline": "none",
          "position": "relative",
          "width": 0,
        }
      }
    >
      <div
        className="sb-addon-material-ui-theme_sidebar"
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Taxon Locations default 1`] = `
<div
  style={
    Object {
      "background": "#ffffff",
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    className="SplitPane  vertical "
    style={
      Object {
        "MozUserSelect": "text",
        "WebkitUserSelect": "text",
        "display": "flex",
        "flex": 1,
        "flexDirection": "row",
        "height": "100%",
        "left": 0,
        "msUserSelect": "text",
        "outline": "none",
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
        "userSelect": "text",
      }
    }
  >
    <div
      className="Pane vertical Pane1"
      style={
        Object {
          "flex": 1,
          "outline": "none",
          "overflowX": "auto",
          "overflowY": "auto",
          "position": "relative",
        }
      }
    >
      <div>
        <div
          className="MuiPaper-root-11 MuiPaper-shadow2-15 MuiPaper-rounded-12 TaxonLocations-card-97"
        >
          <div
            className="MuiCardContent-root-99"
          >
            <h2
              className="MuiTypography-root-58 MuiTypography-headline-63"
            >
              Utbredelse
            </h2>
            <p
              className="MuiTypography-root-58 MuiTypography-body1-67"
            >
              basert på observasjoner
            </p>
            <div
              className="MuiTabs-root-100"
            >
              <div
                className="MuiTabs-flexContainer-101"
              >
                <div
                  className="MuiTabs-scrollingContainer-102 MuiTabs-fixed-103"
                  onScroll={[Function]}
                  role="tablist"
                  style={
                    Object {
                      "marginBottom": 0,
                    }
                  }
                >
                  <div
                    className="MuiTabs-flexContainer-101"
                  >
                    <button
                      aria-selected={true}
                      className="MuiButtonBase-root-49 MuiTab-root-107 MuiTab-rootInherit-115 MuiTab-rootInheritSelected-116"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      role="tab"
                      style={undefined}
                      tabIndex={0}
                      type="button"
                    >
                      <span
                        className="MuiTab-wrapper-119"
                      >
                        <div
                          className="MuiTab-labelContainer-120"
                        >
                          <span
                            className="MuiTab-label-121"
                          >
                            Heat map
                          </span>
                        </div>
                      </span>
                      <span
                        className="MuiTouchRipple-root-51"
                      />
                    </button>
                    <button
                      aria-selected={false}
                      className="MuiButtonBase-root-49 MuiTab-root-107 MuiTab-rootInherit-115"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      role="tab"
                      style={undefined}
                      tabIndex={0}
                      type="button"
                    >
                      <span
                        className="MuiTab-wrapper-119"
                      >
                        <div
                          className="MuiTab-labelContainer-120"
                        >
                          <span
                            className="MuiTab-label-121"
                          >
                            Scatter plot
                          </span>
                        </div>
                      </span>
                      <span
                        className="MuiTouchRipple-root-51"
                      />
                    </button>
                  </div>
                  <div
                    className="MuiTabIndicator-root-123 MuiTabIndicator-colorAccent-124"
                    style={
                      Object {
                        "left": 0,
                        "width": 0,
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="MuiCardMedia-root-126 TaxonLocations-media-98"
            src={undefined}
            style={undefined}
            title="utbredelse"
          >
            <div>
              <div
                id={NaN}
              >
                <canvas
                  id="map-canvas-heatmap"
                  style={
                    Object {
                      "height": "750px",
                      "width": "100%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      className="Resizer vertical "
      onClick={[Function]}
      onDoubleClick={[Function]}
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "cursor": "col-resize",
          "marginRight": -6,
          "width": 10,
          "zIndex": 1,
        }
      }
    />
    <div
      className="Pane vertical Pane2"
      style={
        Object {
          "flex": "none",
          "outline": "none",
          "position": "relative",
          "width": 0,
        }
      }
    >
      <div
        className="sb-addon-material-ui-theme_sidebar"
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Taxon Search default 1`] = `
<div
  style={
    Object {
      "background": "#ffffff",
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    className="SplitPane  vertical "
    style={
      Object {
        "MozUserSelect": "text",
        "WebkitUserSelect": "text",
        "display": "flex",
        "flex": 1,
        "flexDirection": "row",
        "height": "100%",
        "left": 0,
        "msUserSelect": "text",
        "outline": "none",
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
        "userSelect": "text",
      }
    }
  >
    <div
      className="Pane vertical Pane1"
      style={
        Object {
          "flex": 1,
          "outline": "none",
          "overflowX": "auto",
          "overflowY": "auto",
          "position": "relative",
        }
      }
    >
      <div>
        <div
          style={
            Object {
              "display": "inline-block",
              "muiPrepared": true,
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            className={undefined}
            style={
              Object {
                "backgroundColor": "transparent",
                "cursor": "auto",
                "display": "inline-block",
                "fontFamily": "Roboto, sans-serif",
                "fontSize": 16,
                "height": 72,
                "lineHeight": "24px",
                "muiPrepared": true,
                "position": "relative",
                "transition": "height 200ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                "width": "100%",
              }
            }
          >
            <label
              className={undefined}
              htmlFor="1"
              onClick={undefined}
              style={
                Object {
                  "color": "rgba(0, 0, 0, 0.3)",
                  "lineHeight": "22px",
                  "muiPrepared": true,
                  "pointerEvents": "none",
                  "position": "absolute",
                  "top": 38,
                  "transform": "scale(1) translate(0, 0)",
                  "transformOrigin": "left top",
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "userSelect": "none",
                  "zIndex": 1,
                }
              }
            >
              Søk på takson
            </label>
            <div
              style={
                Object {
                  "bottom": 12,
                  "color": "rgba(0, 0, 0, 0.3)",
                  "muiPrepared": true,
                  "opacity": 0,
                  "position": "absolute",
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                }
              }
            >
              Søk på vitenskapelig navn
            </div>
            <input
              autoComplete="off"
              autoFocus={true}
              disabled={false}
              id="1"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              open={false}
              style={
                Object {
                  "WebkitOpacity": 1,
                  "WebkitTapHighlightColor": "rgba(0,0,0,0)",
                  "appearance": "textfield",
                  "backgroundColor": "rgba(0,0,0,0)",
                  "border": "none",
                  "boxSizing": "border-box",
                  "color": "rgba(0, 0, 0, 0.87)",
                  "cursor": "inherit",
                  "font": "inherit",
                  "height": "100%",
                  "marginTop": 14,
                  "muiPrepared": true,
                  "outline": "none",
                  "padding": 0,
                  "position": "relative",
                  "width": "100%",
                }
              }
              type="text"
              value=""
            />
            <div>
              <hr
                aria-hidden="true"
                style={
                  Object {
                    "borderBottomStyle": "solid",
                    "borderBottomWidth": 1,
                    "borderColor": "#e0e0e0",
                    "borderLeft": "none",
                    "borderRight": "none",
                    "borderTop": "none",
                    "bottom": 8,
                    "boxSizing": "content-box",
                    "margin": 0,
                    "muiPrepared": true,
                    "position": "absolute",
                    "width": "100%",
                  }
                }
              />
              <hr
                aria-hidden="true"
                style={
                  Object {
                    "borderBottomStyle": "solid",
                    "borderBottomWidth": 2,
                    "borderColor": "#00bcd4",
                    "borderLeft": "none",
                    "borderRight": "none",
                    "borderTop": "none",
                    "bottom": 8,
                    "boxSizing": "content-box",
                    "margin": 0,
                    "muiPrepared": true,
                    "position": "absolute",
                    "transform": "scaleX(0)",
                    "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                    "width": "100%",
                  }
                }
              />
            </div>
          </div>
          <div
            style={
              Object {
                "display": "none",
              }
            }
          />
        </div>
      </div>
    </div>
    <span
      className="Resizer vertical "
      onClick={[Function]}
      onDoubleClick={[Function]}
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "cursor": "col-resize",
          "marginRight": -6,
          "width": 10,
          "zIndex": 1,
        }
      }
    />
    <div
      className="Pane vertical Pane2"
      style={
        Object {
          "flex": "none",
          "outline": "none",
          "position": "relative",
          "width": 0,
        }
      }
    >
      <div
        className="sb-addon-material-ui-theme_sidebar"
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Taxon Tree default 1`] = `
<div
  style={
    Object {
      "background": "#ffffff",
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    className="SplitPane  vertical "
    style={
      Object {
        "MozUserSelect": "text",
        "WebkitUserSelect": "text",
        "display": "flex",
        "flex": 1,
        "flexDirection": "row",
        "height": "100%",
        "left": 0,
        "msUserSelect": "text",
        "outline": "none",
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
        "userSelect": "text",
      }
    }
  >
    <div
      className="Pane vertical Pane1"
      style={
        Object {
          "flex": 1,
          "outline": "none",
          "overflowX": "auto",
          "overflowY": "auto",
          "position": "relative",
        }
      }
    >
      <div>
        <ul
          className="MuiList-root-128 MuiList-padding-129"
        >
          <div
            className="MuiListItem-container-133"
          >
            <li
              className="MuiButtonBase-root-49 MuiListItem-root-132 MuiListItem-gutters-139 MuiListItem-button-140 MuiListItem-secondaryAction-141 MuiListItem-default-135"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="MuiAvatar-root-142"
              >
                <img
                  alt={undefined}
                  className="MuiAvatar-img-144"
                  sizes={undefined}
                  src="http://nodeyoda.westeurope.cloudapp.azure.com/taxonPhoto/1045.jpg"
                  srcSet={undefined}
                />
              </div>
              <div
                className="MuiListItemText-root-145"
              >
                <h3
                  className="MuiTypography-root-58 MuiTypography-subheading-65 MuiListItemText-text-148"
                >
                  Agaricomycetes
                </h3>
              </div>
              <span
                className="MuiTouchRipple-root-51"
              />
            </li>
            <div
              className="MuiListItemSecondaryAction-root-150"
            >
              <div
                className="MuiChip-root-151"
                onClick={undefined}
                onKeyDown={[Function]}
                role="button"
                tabIndex={-1}
              >
                <span
                  className="MuiChip-label-156"
                >
                  494614
                </span>
              </div>
            </div>
          </div>
        </ul>
      </div>
    </div>
    <span
      className="Resizer vertical "
      onClick={[Function]}
      onDoubleClick={[Function]}
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "cursor": "col-resize",
          "marginRight": -6,
          "width": 10,
          "zIndex": 1,
        }
      }
    />
    <div
      className="Pane vertical Pane2"
      style={
        Object {
          "flex": "none",
          "outline": "none",
          "position": "relative",
          "width": 0,
        }
      }
    >
      <div
        className="sb-addon-material-ui-theme_sidebar"
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </div>
  </div>
</div>
`;
